--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,7 @@
 
 	"manifest_version": 2,
 	"name": "Fast Copy Links",
-	"version": "1.2",
+	"version": "1.3",
 
 	"description": "Copy links on Ctrl+C.",
 	"icons": {
@@ -32,6 +32,7 @@
 
 	"content_scripts": [{
 		"matches": ["<all_urls>"],
-		"js": ["/scripts/content.js"]
+		"js": ["/scripts/content.js"],
+        "all_frames": true
 	}]
 }
