--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -17,7 +17,8 @@
 	},
 
 	"permissions": [
-		"clipboardWrite"
+		"clipboardWrite",
+		"storage"
 	],
 
 	"browser_action": {
@@ -33,6 +34,6 @@
 	"content_scripts": [{
 		"matches": ["<all_urls>"],
 		"js": ["/scripts/content.js"],
-        "all_frames": true
+		"all_frames": true
 	}]
 }
