--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -12,7 +12,8 @@
 
 	"applications": {
 		"gecko": {
-			"strict_min_version": "61.0"
+			"strict_min_version": "61.0",
+			"id": "@fcl"
 		}
 	},
 
